add controller with 2 pages (home + contact)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    Menu: <a href="{{path('home')}}">Home</a> - <a href="{{path('contact')}}">Contact</a>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
